# Staatlichen-Ausgaben-Klassifizierung

./: .gitignore  03_Data_Preprocessing_for_basic_modelling.ipynb  05_Data_Augmentation.ipynb  08_Evaluate_on_Random_Forest.ipynb  09_Clustering.ipynb  0_Scrape_dataset.ipynb  10_Optimizing_model copy.ipynb  10_Optimizing_model.ipynb  11_Test_data_preprocessing_pipeline.ipynb  1_Exploratory_Data_Analysis.ipynb  2_BERT_Pytorch_baseline.ipynb  3_Data_Preprocessing.ipynb  3_Data_Preprocessing_for_basic_modelling.ipynb  4_Basic_Modelling.ipynb  4_Modelling.ipynb  5_Data_Augmentation.ipynb  6_Training_pipeline.ipynb  7_Evaluate_on_BERT_Pytorch (recommended).ipynb  8_Evaluate_on_Random_Forest.ipynb  Dockerfile  README.md  docker-compose.yml  pyproject.toml  scrapy_web_crawler.py  task.md
data/: all_data.csv  augmented_data.csv  preprocessed_data.csv  raw_data.csv
lib/bert_pytorch/: data_preparation.py  evaluate.py  model_preparation.py  train.py
lib/utils/: helper_functions.py
results/: results.csv  view_results.ipynb
