[tool.poetry]
name = "case-lisandro"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.1"
pandas = "^1.4.0"
ipykernel = "^6.7.0"
seaborn = "^0.11.2"
transformers = "^4.16.2"
torch = "1.10.1"
gdown = "^4.2.1"
datasets = "^1.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
