[tool.poetry]
name = "case-lisandro"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.1"
pandas = "^1.4.0"
ipykernel = "^6.7.0"
seaborn = "^0.11.2"
transformers = "<4.16.0"
gdown = "^4.2.1"
datasets = "^1.18.2"
scikit-learn = "^1.0.2"
install = "^1.3.5"
numpy = "^1.22.1"
requests = "^2.27.1"
nlpaug = "^1.1.10"
sentencepiece = "^0.1.96"
spacy = "^3.2.1"
jupyterlab = "^3.2.8"
wordcloud = "^1.8.1"

[tool.poetry.dev-dependencies]
poethepoet = "^0.12.2"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.7.1+cu110 torchvision==0.8.2+cu110 torchaudio==0.7.2 -f https://download.pytorch.org/whl/torch_stable.html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
